--- a/_members/en/ootaki_kouki.html
+++ b/_members/en/ootaki_kouki.html
@@ -1,7 +1,7 @@
 ---
 lang:        en
-name:        Kouki Ootaki
-homepage:
+name:        Koki Otaki
+homepage:    https://www2.ccs.tsukuba.ac.jp/public/otaki/
 position:    m1
 tel:         3370
 email:       otaki
